--- a/LojourProperties.Web/Areas/Admin/Pages/V1/PropertyPage/Index.cshtml
+++ b/LojourProperties.Web/Areas/Admin/Pages/V1/PropertyPage/Index.cshtml
@@ -46,7 +46,7 @@
                 Date
             </th>
             <th>
-                Updated
+                Amount
             </th>
             
             <th>
@@ -97,7 +97,7 @@
                                 @Html.DisplayFor(modelItem => item.DateAdded)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.LastUpdated)
+                                @Html.DisplayFor(modelItem => item.Amount)
                             </td>
 
                             <td>
