--- a/LojourProperties.Web/Areas/Admin/Pages/V1/PropertyPage/Details.cshtml
+++ b/LojourProperties.Web/Areas/Admin/Pages/V1/PropertyPage/Details.cshtml
@@ -13,7 +13,7 @@
                 <h4 style="font-weight:900;text-align:center;"><span style="border-bottom:2px solid black">PROPERTY DETAILS</span></h4>
 
                 <a asp-page="./Index" class="btn bg-gradient-warning btn-sm" style="float:right;">Back</a>
-
+                <a class="btn bg-gradient-warning btn-sm" style="float:right;margin-right:5px;" asp-page="./Edit" asp-route-id="@Model.Property.Id">Edit</a>
             </div>
         </div>
         <div class="row">
@@ -208,7 +208,7 @@
                             <td>@Model.Property.StreetName</td>
                         </tr>
 
-                       
+
                         <tr>
                             <th>State </th>
                             <td>@Model.Property.State</td>
@@ -232,12 +232,12 @@
                             <td>@Model.Property.PropertyType.Name</td>
                         </tr>
 
-                     
+
                         <tr>
                             <th>Agent </th>
                             <td>@Model.Property.Agent.Fullname <a asp-page="./AgentProfile" asp-route-id="@Model.Property.AgentId" class="btn btn-success btn-xs">View Profile</a></td>
                         </tr>
-
+                        
                     </table>
                 </div>
                 <div class="tab-pane fade" id="product-comments" role="tabpanel" aria-labelledby="product-comments-tab">
