--- a/LojourProperties.Web/Areas/Admin/Pages/V1/PropertyPage/UpdateImage.cshtml
+++ b/LojourProperties.Web/Areas/Admin/Pages/V1/PropertyPage/UpdateImage.cshtml
@@ -55,7 +55,7 @@
                                 @sn
                             </td>
                             <td>
-                                <a href="@item.ImageUrl" target="_blank">
+                                <a href="@item.FullImageUrl" target="_blank">
                                     <img src="@item.ImageUrl" style="max-height:100px" class="img-fluid" />
                                 </a>
                             </td>
@@ -124,11 +124,15 @@
                         <input type="file" class="control-label" asp-for="file" />
                     </div>
 
+                    <div class="form-group">
+                        <label asp-for="Image.ImageUrl" class="control-label">Large Image</label><br />
+                        <input type="file" class="control-label" asp-for="filelarge" />
+                    </div>
 
 
                     <div class="form-group">
                         <input type="submit" value="Submit" class="btn btn-primary" />
- 
+
                     </div>
                 </form>
             </div>
