--- a/LojourProperties.Web/Areas/Main/Pages/PropertySection/FeatureCategory/Create.cshtml
+++ b/LojourProperties.Web/Areas/Main/Pages/PropertySection/FeatureCategory/Create.cshtml
@@ -15,18 +15,23 @@
     <div class="card-body">
         <div class="row">
             <div class="col-md-12">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="FeaturesCategory.Name" class="control-label"></label>
-                <input asp-for="FeaturesCategory.Name" class="form-control" />
-                <span asp-validation-for="FeaturesCategory.Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="FeaturesCategory.Description" class="control-label"></label>
-                <input asp-for="FeaturesCategory.Description" class="form-control" />
-                <span asp-validation-for="FeaturesCategory.Description" class="text-danger"></span>
-            </div>
+                <form method="post">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="form-group">
+                        <label asp-for="FeaturesCategory.Name" class="control-label"></label>
+                        <input asp-for="FeaturesCategory.Name" class="form-control" />
+                        <span asp-validation-for="FeaturesCategory.Name" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="FeaturesCategory.Description" class="control-label"></label>
+                        <input asp-for="FeaturesCategory.Description" class="form-control" />
+                        <span asp-validation-for="FeaturesCategory.Description" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="FeaturesCategory.Icon" class="control-label"></label>
+                        <input asp-for="FeaturesCategory.Icon" class="form-control" />
+                        <span asp-validation-for="FeaturesCategory.Icon" class="text-danger"></span>
+                    </div>
                     <div class="form-group">
                         <input type="submit" value="Submit" class="btn btn-primary" />
                         <a asp-page="./Index" class="btn bg-gradient-warning btn-sm" style="float:right;">Back</a>
