--- a/LojourProperties.Web/Areas/Main/Pages/PropertySection/FeatureCategory/Index.cshtml
+++ b/LojourProperties.Web/Areas/Main/Pages/PropertySection/FeatureCategory/Index.cshtml
@@ -21,14 +21,15 @@
                 <thead>
                     <tr>
                         <th>S/N</th>
-            <th>
-                @Html.DisplayNameFor(model => model.FeaturesCategory[0].Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FeaturesCategory[0].Description)
-            </th>
-            <th></th>
-        </tr>
+                        <th>
+                            @Html.DisplayNameFor(model => model.FeaturesCategory[0].Name)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.FeaturesCategory[0].Description)
+                        </th>
+                        <th>ICON</th>
+                        <th></th>
+                    </tr>
                 </thead>
                 @{
                     int sn = 0;
@@ -42,12 +43,15 @@
                                 }
                                 @sn
                             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Name)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Description)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Icon)
+                            </td>
                             <td>
                                 <div class="btn-group">
                                     <button type="button" class="btn btn-success">Action</button>
