--- a/LojourProperties.Web/Pages/Shared/Components/Footer/Default.cshtml
+++ b/LojourProperties.Web/Pages/Shared/Components/Footer/Default.cshtml
@@ -8,12 +8,9 @@
                 <div class="col-md-3  col-sm-6 col-xs-12">
                     <!-- Info Widget -->
                     <div class="widget">
-                        <div class="logo"> <img alt="" src="images/logo.png"> </div>
+                        <div class="logo"> <img alt="" src="~/img/lojour-logo-web-2.png"> </div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur et dolor eget erat fringilla port.</p>
-                        <ul class="apps-donwloads">
-                            <li><img src="images/googleplay.png" alt=""></li>
-                            <li><img src="images/appstore.png" alt=""></li>
-                        </ul>
+                       
                     </div>
 
                     <!-- Info Widget Exit -->
@@ -36,9 +33,8 @@
                     <div class="widget my-quicklinks">
                         <h5>Quick Links</h5>
                         <ul>
-                            <li><a href="#">About Us</a></li>
-                            <li><a href="#">Faqs</a></li>
-                            <li><a href="#">Packages</a></li>
+                            <li><a asp-page="/Page/WebPage" asp-route-id="786f812a-8436-4587-8f1d-c9dc68a48898"><i class="fa fa-heart-o" aria-hidden="true"></i> About</a></li>
+                            <li><a asp-page="/Page/WebFaq"><i class="fa fa-folder-open-o" aria-hidden="true"></i> FAQS</a></li>
                             <li><a href="#">Contact Us</a></li>
                         </ul>
                     </div>
@@ -57,7 +53,7 @@
                         </div>
                     </div>
                     <div class="copyright">
-                        <p>© 2017 Carspot All rights reserved. Design by <a href="http://themeforest.net/user/scriptsbundle/portfolio" target="_blank">Scriptsbundle</a> </p>
+                        <p>© 2023 Carspot All rights reserved. Developed by <a href="https://www.juray.ng/" target="_blank">JURAY SMART SOLUTIONS</a> </p>
                     </div>
                     <!-- Newslatter -->
                 </div>
