--- a/LojourProperties.Web/Pages/Shared/Components/Footer/Default.cshtml
+++ b/LojourProperties.Web/Pages/Shared/Components/Footer/Default.cshtml
@@ -1,4 +1,4 @@
-﻿ 
+﻿
 
 <footer class="footer-bg">
     <!-- Footer Content -->
@@ -9,8 +9,10 @@
                     <!-- Info Widget -->
                     <div class="widget">
                         <div class="logo"> <img alt="" src="~/img/lojour-logo-web-2.png"> </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur et dolor eget erat fringilla port.</p>
-                       
+                        <p>
+                            Lojour® is a property listing platform well known for helping real estate agencies and valuators showcase their various properties to prospective clients
+                        </p>
+
                     </div>
 
                     <!-- Info Widget Exit -->
