--- a/LojourProperties.Web/Pages/Shared/_Layout.cshtml
+++ b/LojourProperties.Web/Pages/Shared/_Layout.cshtml
@@ -319,7 +319,7 @@
                             </ul>
                             <ul class="menu-search-bar">
                                 <li>
-                                    <a asp-page="/Request" class="btn btn-theme">Special Request</a>
+                                    <a asp-page="/Request" class="btn btn-theme">Request a Tour</a>
                                 </li>
                             </ul>
                         </div>
