--- a/LojourProperties.Web/Pages/Shared/_Admin.cshtml
+++ b/LojourProperties.Web/Pages/Shared/_Admin.cshtml
@@ -179,27 +179,35 @@
                                 </p>
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a asp-page="/V1/Slides/Index" asp-area="Main" class="nav-link">
+                                <i class="nav-icon fas fa-image"></i>
+                                <p>
+                                    Web Slider
+                                </p>
+                            </a>
+                        </li>
                         @if (User.Identity.IsAuthenticated && User.IsInRole("mSuperAdmin"))
                         {
                             <li class="nav-item">
                                 <a asp-page="/Admin/Index" asp-area="Main" class="nav-link">
                                     <i class="nav-icon fas fa-th"></i>
                                     <p>
-                                       S Dashboard
+                                        S Dashboard
                                     </p>
                                 </a>
                             </li>
                         }
-                            <li class="nav-item" style="margin-bottom:20px;">
-                                <a href="javascript:document.getElementById('logoutForm').submit()" class="nav-link">
-                                    <i class="nav-icon fas fa-th"></i>
-                                    <p>
-                                        Logout
-                                    </p>
-                                </a>
-                            </li>
+                        <li class="nav-item" style="margin-bottom:20px;">
+                            <a href="javascript:document.getElementById('logoutForm').submit()" class="nav-link">
+                                <i class="nav-icon fas fa-th"></i>
+                                <p>
+                                    Logout
+                                </p>
+                            </a>
+                        </li>
 
-                        </ul>
+                    </ul>
                 </nav>
                 <!-- /.sidebar-menu -->
             </div>
