--- a/LojourProperties.Web/Areas/Admin/Pages/V1/Web/Create.cshtml
+++ b/LojourProperties.Web/Areas/Admin/Pages/V1/Web/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 @using static LojourProperties.Domain.Models.Enum;
-@model LojourProperties.Web.Areas.Main.Pages.Web.CreateModel
+@model LojourProperties.Web.Areas.Admin.Pages.V1.Web.CreateModel
 
 @{
     ViewData["Title"] = "Create";
