--- a/LojourProperties.Web/Areas/Admin/Pages/V1/Web/Details.cshtml
+++ b/LojourProperties.Web/Areas/Admin/Pages/V1/Web/Details.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model LojourProperties.Web.Areas.Main.Pages.Web.DetailsModel
+@model LojourProperties.Web.Areas.Admin.Pages.V1.Web.DetailsModel
 
 @{
     ViewData["Title"] = "Details";
