--- a/LojourProperties.Web/Pages/Shared/Components/Footer/Default.cshtml
+++ b/LojourProperties.Web/Pages/Shared/Components/Footer/Default.cshtml
@@ -37,6 +37,11 @@
                         <ul>
                             <li><a asp-page="/Page/WebPage" asp-route-id="786f812a-8436-4587-8f1d-c9dc68a48898"><i class="fa fa-heart-o" aria-hidden="true"></i> About</a></li>
                             <li><a asp-page="/Page/WebFaq"><i class="fa fa-folder-open-o" aria-hidden="true"></i> FAQS</a></li>
+                            <li><a asp-page="/Page/WebPage" asp-route-id="c2a3c223-b3e3-427a-95ce-893fc93e1104"><i class="fa fa-heart-o" aria-hidden="true"></i> Privacy Policy</a></li>
+                            <li><a asp-page="/Page/WebPage" asp-route-id="683b2c9c-6e1f-4354-9081-ed693bdf5728"><i class="fa fa-heart-o" aria-hidden="true"></i> Terms of Use</a></li>
+
+
+
                             <li><a href="#">Contact Us</a></li>
                         </ul>
                     </div>
@@ -47,7 +52,9 @@
                     <div class="widget widget-newsletter">
                         <h5>Singup for Weekly Newsletter</h5>
                         <div class="fieldset">
-                            <p>We may send you information about related events, webinars, products and services which we believe.</p>
+                            <p>
+                                Get updated on our weekly events and properties
+                            </p>
                             <form>
                                 <input class="" value="Enter your email address" type="text">
                                 <input class="submit-btn" name="submit" value="Submit" type="submit">
@@ -55,7 +62,7 @@
                         </div>
                     </div>
                     <div class="copyright">
-                        <p>© 2023 Carspot All rights reserved. Developed by <a href="https://www.juray.ng/" target="_blank">JURAY SMART SOLUTIONS</a> </p>
+                        <p>© 2023 LOJOUR PROPERTIES All rights reserved. Developed by <a href="https://www.juray.ng/" target="_blank">JURAY SMART SOLUTIONS</a> </p>
                     </div>
                     <!-- Newslatter -->
                 </div>
