--- a/LojourProperties.Web/Pages/Shared/_Admin.cshtml
+++ b/LojourProperties.Web/Pages/Shared/_Admin.cshtml
@@ -180,10 +180,18 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a asp-page="/V1/Slides/Index" asp-area="Main" class="nav-link">
+                            <a asp-page="/V1/Slides/Index" asp-area="Admin" class="nav-link">
                                 <i class="nav-icon fas fa-image"></i>
                                 <p>
                                     Web Slider
+                                </p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a asp-page="/V1/Web/Index" asp-area="Admin" class="nav-link">
+                                <i class="nav-icon fas fa-tachometer-alt"></i>
+                                <p>
+                                    Pages
                                 </p>
                             </a>
                         </li>
