--- a/LojourProperties.Web/Areas/Admin/Pages/V1/Slides/Edit.cshtml
+++ b/LojourProperties.Web/Areas/Admin/Pages/V1/Slides/Edit.cshtml
@@ -105,7 +105,7 @@
                     </div>
                     <div class="form-group">
                         <label asp-for="Slider.Url" class="control-label">Upload to Replace Image</label>
-                        <input type="file" class="control-label" asp-for="file" required="" />
+                        <input type="file" class="control-label" asp-for="file"  />
                     </div>
 
                     <div class="form-group">
