--- a/LojourProperties.Web/Areas/Admin/Pages/V1/Web/Index.cshtml
+++ b/LojourProperties.Web/Areas/Admin/Pages/V1/Web/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model LojourProperties.Web.Areas.Main.Pages.Web.IndexModel
+@model LojourProperties.Web.Areas.Admin.Pages.V1.Web.IndexModel
 
 @{
     ViewData["Title"] = "Index";
