--- a/LojourProperties.Web/Pages/Index.cshtml
+++ b/LojourProperties.Web/Pages/Index.cshtml
@@ -54,21 +54,21 @@
             <div class="row">
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
                     <div class="icons">
-                        <i class="fa fa-home"></i>
+                        <i class="fas fa-home"></i>
                     </div>
                     <div class="number"><span class="timer" data-from="0" data-to="1238" data-speed="1500" data-refresh-interval="5">0</span>+</div>
                     <h4>Total <span>Properties</span></h4>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
                     <div class="icons">
-                        <i class="flaticon-security"></i>
+                        <i class="fas fa-users"></i>
                     </div>
                     <div class="number"><span class="timer" data-from="0" data-to="234" data-speed="1500" data-refresh-interval="5">0</span>+</div>
                     <h4>Verified <span>Agents</span></h4>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
                     <div class="icons">
-                        <i class="flaticon-like-1"></i>
+                        <i class="fas fa-heart"></i>
                     </div>
                     <div class="number"><span class="timer" data-from="0" data-to="742" data-speed="1500" data-refresh-interval="5">0</span>+</div>
                     <h4>Active <span>Users</span></h4>
@@ -87,17 +87,17 @@
     </div>
 
 
-    <section class="news section-padding">
+    <!--<section class="news section-padding">
         <div class="container">
             <div class="row">
                 <div class="heading-panel">
-                    <div class="col-xs-12 col-md-12 col-sm-12 left-side">
+                    <div class="col-xs-12 col-md-12 col-sm-12 left-side">-->
                         <!-- Main Title -->
-                        <h1>Clients  <span class="heading-color"> Reviews</span> Feedback</h1>
+                        <!--<h1>Clients  <span class="heading-color"> Reviews</span> Feedback</h1>
                     </div>
-                </div>
+                </div>-->
                 <!-- Middle Content Box -->
-                <div class="col-md-12 col-xs-12 col-sm-12">
+                <!--<div class="col-md-12 col-xs-12 col-sm-12">
                     <div class="row">
                         <div class="owl-testimonial-1">
                             @foreach (var item in Model.Testimonies)
@@ -119,12 +119,12 @@
                         </div>
                         <div class="clearfix"></div>
                     </div>
-                </div>
+                </div>-->
                 <!-- Middle Content Box End -->
-            </div>
+            <!--</div>
             <div class="clearfix"></div>
         </div>
-    </section>
+    </section>-->
 
 
     @await Component.InvokeAsync("Footer")
