--- a/LojourProperties.Web/Pages/Page/WebPage.cshtml
+++ b/LojourProperties.Web/Pages/Page/WebPage.cshtml
@@ -8,5 +8,21 @@
 
 <div class="main-content-area clearfix">
 
+    <section class="custom-padding about-us">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
-    </div>
+                    <div class="content boxed-div">
+
+                        @Html.Raw(Model.WebPage.Description)
+
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+    </section>
+</div>
+@await Component.InvokeAsync("Footer")
